small bit of ref and lesson improvements

--- a/docs/reference/word_types/nouns.mdx
+++ b/docs/reference/word_types/nouns.mdx
@@ -7,9 +7,59 @@ import TabItem from '@theme/TabItem';
 
 # Nouns
 
-A type of word that represents an entity (tangible or intangible).
+A type of word that represents an entity (tangible or intangible). Can be
+represented by a Noun Phrase (NP) which contains a nucleus and surrounding
+quantifiers and modifiers.
 
 ## Roles
+
+### Causer / Voluntary Subject
+
+The 
+
+During causative sentences, a NP with this role represents the *causer*.
+Otherwise, an NP with this role will be the agent or experiencer of the action.
+The nature of this role is that the noun phrase is making the choice to commit
+the act of their own free will. 
+
+### Causee / Involuntary Subject
+
+During causative sentences, a NP with this role will represent the *causee*.
+Otherwise, an NP with this role will be the agent or experiencer of the action.
+The nature of this role is that the noun phrase is **not** making the choice to
+commit the act of their own free will. Either they are bound/forced to do so or
+they do not have the wherewithal to make a conscious choice on the matter and
+are acting out of some basic instinst.
+
+### Patient or Theme (Direct Object)
+
+### Instrument or Manner
+
+### Location or Time
+
+### Direction or Destination (Indirect Object)
+
+### Source or Origin
+
+### Beneficiary or Purpose
+
+### Reason or Cause
+
+### Reference
+
+### Genitive
+
+### Collaborator
+
+### Context or Condition
+
+### Counter-Agent
+
+### Evidence
+
+### Distance or Duration
+
+### Intermediate
 
 ## Prepositions
 
