Add more noun details

--- a/docs/reference/word_types/nouns.mdx
+++ b/docs/reference/word_types/nouns.mdx
@@ -15,7 +15,7 @@ quantifiers and modifiers.
 
 ### Causer / Voluntary Subject
 
-The 
+The %%ü|ü%% particle precedes the this noun phrase.
 
 During causative sentences, a NP with this role represents the *causer*.
 Otherwise, an NP with this role will be the agent or experiencer of the action.
@@ -23,6 +23,8 @@ The nature of this role is that the noun phrase is making the choice to commit
 the act of their own free will. 
 
 ### Causee / Involuntary Subject
+
+The %%ölë|ölë%% particle precedes the this noun phrase.
 
 During causative sentences, a NP with this role will represent the *causee*.
 Otherwise, an NP with this role will be the agent or experiencer of the action.
