Added object details to noun page

--- a/docs/reference/word_types/nouns.mdx
+++ b/docs/reference/word_types/nouns.mdx
@@ -26,7 +26,6 @@ the act of their own free will.
 
 The %%ölë|ölë%% particle precedes the this noun phrase.
 
-
 During causative sentences, a NP with this role will represent the *causee*.
 Otherwise, an NP with this role will be the agent or experiencer of the action.
 The nature of this role is that the noun phrase is **not** making the choice to
@@ -35,6 +34,13 @@ they do not have the wherewithal to make a conscious choice on the matter and
 are acting out of some basic instinst.
 
 ### Patient or Theme (Direct Object)
+
+The %%zö|zö%% particle precedes the this noun phrase.
+
+This particle is used for transitive verbs that have an additional argument. The
+argument represents a patient (an entity receiving some action) or a theme (a
+specific descriptive element that greatly alters the interpretation of the
+verbal action but isn't itself affected by the action).
 
 ### Instrument or Manner
 
