Remove unnecessary article

--- a/docs/reference/word_types/nouns.mdx
+++ b/docs/reference/word_types/nouns.mdx
@@ -15,7 +15,7 @@ quantifiers and modifiers.
 
 ### Causer / Voluntary Subject
 
-The %%ü|ü%% particle precedes the this noun phrase.
+The %%ü|ü%% particle precedes this noun phrase.
 
 During causative sentences, a NP with this role represents the *causer*.
 Otherwise, an NP with this role will be the agent or experiencer of the action.
@@ -24,7 +24,7 @@ the act of their own free will.
 
 ### Causee / Involuntary Subject
 
-The %%ölë|ölë%% particle precedes the this noun phrase.
+The %%ölë|ölë%% particle precedes this noun phrase.
 
 During causative sentences, a NP with this role will represent the *causee*.
 Otherwise, an NP with this role will be the agent or experiencer of the action.
@@ -35,7 +35,7 @@ are acting out of some basic instinst.
 
 ### Patient or Theme (Direct Object)
 
-The %%zö|zö%% particle precedes the this noun phrase.
+The %%zö|zö%% particle precedes this noun phrase.
 
 This particle is used for transitive verbs that have an additional argument. The
 argument represents a patient (an entity receiving some action) or a theme (a
