Add blurbs for each noun role

--- a/docs/reference/word_types/nouns.mdx
+++ b/docs/reference/word_types/nouns.mdx
@@ -33,46 +33,124 @@ commit the act of their own free will. Either they are bound/forced to do so or
 they do not have the wherewithal to make a conscious choice on the matter and
 are acting out of some basic instinst.
 
-### Patient or Theme (Direct Object)
+### Patient, Theme, Stimulus (Direct Object)
 
 The %%zö|zö%% particle precedes this noun phrase.
 
-This particle is used for transitive verbs that have an additional argument. The
-argument represents a patient (an entity receiving some action) or a theme (a
-specific descriptive element that greatly alters the interpretation of the
-verbal action but isn't itself affected by the action).
+This role is used for transitive verbs that have an additional argument. The
+argument represents a patient (an entity that undergoes the action and changes
+state), a theme (an entity that undergoes the action but does not change state),
+or a stimulus (an entity that prompts sensory or emotional feeling). In English,
+this represents some of the senses of the word "to" and "into", however, often
+times there is no preceding particle for this argument.
 
 ### Instrument or Manner
 
+The %%vio|vio%% particle precedes this noun phrase.
+
+This role is used for NPs that represent some entity that was used to carry out
+the action. It can also represent the way or manner with which the action was
+carried out. In English, this represents some of the senses of the words "with",
+"using", and "via".
+
 ### Location or Time
+
+The %%hoi|hoi%% particle precedes this noun phrase.
+
+This role is used for NPs that represent where or when the action occurs. In
+English, this represents some of the senses of the words "in", "at", and "on".
 
 ### Direction or Destination (Indirect Object)
 
+The %%müt|müt%% particle precedes this noun phrase.
+
+This role is used for NPs that represent where the action is directed towards.
+In English, this represents some of the senses of the words "to", "into", and
+"towards".
+
 ### Source or Origin
+
+The %%sün|sün%% particle precedes this noun phrase.
+
+This role is used for NPs that represent where the action originated. In
+English, this represents some of the senses of the word "from".
 
 ### Beneficiary or Purpose
 
-### Reason or Cause
+The %%oxon|oxon%% particle precedes this noun phrase.
 
-### Reference
+This role is used for NPs that represent for whose benefit the action occurs or
+the reason for the action. In English, this represents some of the senses of the
+word "for".
 
-### Genitive
+### Cause
+
+The %%nënko|nënko%% particle precedes this noun phrase.
+
+This role is used for NPs that represent what caused the action to occur or a
+past reason that led to the action. In English, this represents some of the
+senses of the word "because".
 
 ### Collaborator
 
+The %%ovek|ovek%% particle precedes this noun phrase.
+
+This role is used for NPs that represent a fellow actor that is also engaged in
+the same action as the subject. However, the NP is not considered a subject of
+the sentence. In English, this represents some of the senses of the word
+"with".
+
 ### Context or Condition
 
-### Counter-Agent
+The %%win|win%% particle precedes this noun phrase.
+
+This role is used for NPs that represent an overarching topic, contextual
+detail, or a condition for the underlying sentence. In English, this represents
+some of the senses of the words "regarding", "given", "as for", and "when".
+
+### Recipient or Counter-Agent
+
+The %%didi|didi%% particle precedes this noun phrase.
+
+This role is used for NPs that either represent a special kind of goal/agent for
+verbs that indicate a change in ownership/possession or an opposing agent for
+verbs that indicate an action that is *oppositional* (where both sides are
+engaging in an opposing action). In English, this represents some of the senses
+of the words "to", "with", and "against".
 
 ### Evidence
 
+The %%üz|üz%% particle precedes this noun phrase.
+
+This role is used for NPs that represent proof or an information source that the
+specified action is known or believed to have occurred, is occurring, or will
+occur. In English, this represents some of the senses of the phrase "or so".
+
 ### Distance or Duration
+
+The %%lon|lon%% particle precedes this noun phrase.
+
+This role is used for NPs that represent the time or space that the action
+occurs within. This role is related to the location/time role but it represents
+finite physical space or actual time periods. In English, this represents some
+of the senses of the word "for".
 
 ### Intermediate
 
-## Prepositions
+The %%gıtno|gıtno%% particle precedes this noun phrase.
 
-### `je`
+This role is used for either a NP that represents the a time or physical entity
+that the action occurs between or a conjunction of two NPs that represent two
+boundaries in time or space that the action occurs between. In English, this
+represents some of the senses of the word "between".
+
+### Genitive
+
+The %%yë|yë%% particle precedes this noun phrase.
+
+This role is used for a NP that is describing the preceding noun or verb phrase
+in some contextually dependent manner. In English, this represents some of the
+senses of the word "of".
 
 ## From...
 
