--- a/docs/reference/word_types/nouns.mdx
+++ b/docs/reference/word_types/nouns.mdx
@@ -177,7 +177,7 @@ phrase.
   <TabItem value="latin" label="Latin" default>
     %%pön|pön%% %%ü|ü%% %%wölık|wölık%% %%zö|zö%% %%küyö|küyö%%
   </TabItem>
-  <TabItem value="onhukızgo" label="ɽ̃ɂʃɔ̄ȷꜿ">
+  <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
     %%ʋ̃ı|pön%% %%ɽʄ|ü%% %%ʒıʓ̑ȷ|wölık%% %%ꞇı|zö%% %%ɔʄɀı|küyö%%
   </TabItem>
 </Tabs>
@@ -193,7 +193,7 @@ useful: it allows you to describe a quality with some modifiers of its own.
   <TabItem value="latin" label="Latin" default>
     %%töxözü|töxözü%% %%pümi|pümi%% %%yë|yë%% %%ıwotë|ıwotë%% %%ëto|ëto%%
   </TabItem>
-  <TabItem value="onhukızgo" label="ɽ̃ɂʃɔ̄ȷꜿ">
+  <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
     %%cıɋıꞇʄ|töxözü%% %%ʋʄƶɟ|pümi%% %%ɀʇ|yë%% %%ɽȷʒcʇ|ıwotë%% %%ɽʇc|ëto%%
   </TabItem>
 </Tabs>
