Fix terms used in articles already

--- a/docs/reference/word_types/nouns.mdx
+++ b/docs/reference/word_types/nouns.mdx
@@ -191,10 +191,10 @@ useful: it allows you to describe a quality with some modifiers of its own.
 
 <Tabs groupId="popöun-zıkto">
   <TabItem value="latin" label="Latin" default>
-    %%töxözü|töxözü%% %%pümi|pümi%% %%yë|yë%% %%ıwotë|ıwotë%% %%ëto|ëto%%
+    %%töxüzı|töxüzı%% %%pümi|pümi%% %%yë|yë%% %%ıwotë|ıwotë%% %%ëto|ëto%%
   </TabItem>
   <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
-    %%cıɋıꞇʄ|töxözü%% %%ʋʄƶɟ|pümi%% %%ɀʇ|yë%% %%ɽȷʒcʇ|ıwotë%% %%ɽʇc|ëto%%
+    %%cıɋʄꞇȷ|töxüzı%% %%ʋʄƶɟ|pümi%% %%ɀʇ|yë%% %%ɽȷʒcʇ|ıwotë%% %%ɽʇc|ëto%%
   </TabItem>
 </Tabs>
 
