Fix formatting of examples

--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -88,13 +88,11 @@ whether the noun is seen as plural or singular.
 
 <Tabs groupId="popöun-zıkto">
   <TabItem value="latin" label="Latin" default>
-    %%düi|düi%% %%viyën|viyën%% %%son|son%% %%höveȷi|höveȷi%% "two hundred and three cows"
-    
-    %%kut|kut%% %%ënpokon|ënpokon%% "one burp" or "a burp"
+    <p>%%düi|düi%% %%viyën|viyën%% %%son|son%% %%höveȷi|höveȷi%% "two hundred and three cows"</p>
+    <p>%%kut|kut%% %%ënpokon|ënpokon%% "one burp" or "a burp"</p>
   </TabItem>
   <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
-    %%ʌʄɽɟ|düi%% %%ɤɟɀ̃ʇ|viyën%% %%ɐ̃|son%% %%ɂıɤɿⱴɟ|höveȷi%% "two hundred and three cows"
-
-    %%ɔ̆ʃ|kut%% %%ɽ̃ʇʋɔ̃|ënpokon%% "one burp" or "a burp"
+    <p>%%ʌʄɽɟ|düi%% %%ɤɟɀ̃ʇ|viyën%% %%ɐ̃|son%% %%ɂıɤɿⱴɟ|höveȷi%% "two hundred and three cows"</p>
+    <p>%%ɔ̆ʃ|kut%% %%ɽ̃ʇʋɔ̃|ënpokon%% "one burp" or "a burp"</p>
   </TabItem>
 </Tabs>
