Add more number details

--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -19,61 +19,61 @@ To express your internet usage or uber cost, we need quantifiers that will tell
 us exactly how many of something we have. The table below provides the numbers
 that you'll need to count all the way up to a trillion.
 
-| Number    | Hisyëö                                                             |
-| :-------- | :----------------------------------------------------------------- |
-| 0         | xünyu                                                              |
-| 1         | kut                                                                |
-| 2         | düi                                                                |
-| 3         | son                                                                |
-| 4         | nonkü                                                              |
-| 5         | pızku                                                              |
-| 6         | toü                                                                |
-| 7         | xëti                                                               |
-| 8         | tukwos                                                             |
-| 9         | tiso                                                               |
-| 10        | dus                                                                |
-| 11        | onsü                                                               |
-| 12        | pole                                                               |
-| 13        | telö                                                               |
-| 14        | sitsi                                                              |
-| 15        | kinsë                                                              |
-| 16        | se                                                                 |
-| 17        | dus xëti                                                           |
-| 18        | dus tukwos                                                         |
-| 19        | dus tiso                                                           |
-| 20        | düi dus                                                            |
-| 21        | düi dus kut                                                        |
-| 21        | düi dus düi                                                        |
-| 23        | düi dus son                                                        |
-| 24        | düi dus nonkü                                                      |
-| 25        | düi dus pızku                                                      |
-| 26        | düi dus toü                                                        |
-| 27        | düi dus xëti                                                       |
-| 28        | düi dus tukwos                                                     |
-| 29        | düi dus tiso                                                       |
-| 30        | son dus                                                            |
-| 31        | son dus kut                                                        |
-| 32        | son dus düi                                                        |
-| 33        | son dus son                                                        |
-| 34        | son dus nonkü                                                      |
-| 35        | son dus pızku                                                      |
-| 36        | son dus toü                                                        |
-| 37        | son dus xëti                                                       |
-| 38        | son dus tukwos                                                     |
-| 39        | son dus tiso                                                       |
-| 40        | nonkü dus                                                          |
-| 50        | pızku dus                                                          |
-| 60        | toü dus                                                            |
-| 70        | xëti dus                                                           |
-| 80        | tukwos dus                                                         |
-| 90        | tiso dus                                                           |
-| 100       | viyën                                                              |
-| 101       | viyën kut                                                          |
-| 234       | düi viyën son dus nonkü                                            |
-| 1000      | zën kut                                                            |
-| 1,000,000 | zën düi                                                            |
-| 1,999     | zën kut,tiso viyën tiso dus tiso                                   |
-| 1,234,567 | zën düi, düi viyën son dus nonkü zën kut, pızku viyën toü dus xëti |
+| Number    | Hisyëö                                                             | ɂ́ɟɀʇɽı                                                     |
+| :-------- | :----------------------------------------------------------------- | ---------------------------------------------------------- |
+| 0         | xünyu                                                              | ɋ̃ʄɀʃ                                                       |
+| 1         | kut                                                                | ɔ̆ʃ                                                         |
+| 2         | düi                                                                | ʌʄɽɟ                                                       |
+| 3         | son                                                                | ɐ̃                                                          |
+| 4         | nonkü                                                              | ƨ̃ɔʄ                                                        |
+| 5         | pızku                                                              | ʋ̄ȷɔʃ                                                       |
+| 6         | toü                                                                | cɽʄ                                                        |
+| 7         | xëti                                                               | ɋʇcɟ                                                       |
+| 8         | tukwos                                                             | c̑ʃʒ́                                                        |
+| 9         | tiso                                                               | cɟɐ                                                        |
+| 10        | dus                                                                | ʌ́ʃ                                                         |
+| 11        | onsü                                                               | ɽ̃ɐʄ                                                        |
+| 12        | pole                                                               | ʋʓɿ                                                        |
+| 13        | telö                                                               | cɿʓı                                                       |
+| 14        | sitsi                                                              | ɐ̆ɟɐɟ                                                       |
+| 15        | kinsë                                                              | ɔ̃ɟɐʇ                                                       |
+| 16        | ses                                                                | ɐ́ɿ                                                         |
+| 17        | dus xëti                                                           | ʌ́ʃ ɋʇcɟ                                                    |
+| 18        | dus tukwos                                                         | ʌ́ʃ c̑ʃʒ́                                                     |
+| 19        | dus tiso                                                           | ʌ́ʃ cɟɐ                                                     |
+| 20        | düi dus                                                            | ʌʄɽɟ ʌ́ʃ                                                    |
+| 21        | düi dus kut                                                        | ʌʄɽɟ ʌ́ʃ ɔ̆ʃ                                                 |
+| 22        | düi dus düi                                                        |                                                            |
+| 23        | düi dus son                                                        | ʌʄɽɟ ʌ́ʃ ɐ̃                                                  |
+| 24        | düi dus nonkü                                                      | ʌʄɽɟ ʌ́ʃ ƨ̃ɔʄ                                                |
+| 25        | düi dus pızku                                                      | ʌʄɽɟ ʌ́ʃ ʋ̄ȷɔʃ                                               |
+| 26        | düi dus toü                                                        | ʌʄɽɟ ʌ́ʃ cɽʄ                                                |
+| 27        | düi dus xëti                                                       | ʌʄɽɟ ʌ́ʃ ɋʇcɟ                                               |
+| 28        | düi dus tukwos                                                     | ʌʄɽɟ ʌ́ʃ c̑ʃʒ́                                                |
+| 29        | düi dus tiso                                                       | ʌʄɽɟ ʌ́ʃ cɟɐ                                                |
+| 30        | son dus                                                            | ɐ̃ ʌ́ʃ                                                       |
+| 31        | son dus kut                                                        | ɐ̃ ʌ́ʃ ɔ̆ʃ                                                    |
+| 32        | son dus düi                                                        | ɐ̃ ʌ́ʃ ʌʄɽɟ                                                  |
+| 33        | son dus son                                                        | ɐ̃ ʌ́ʃ ɐ̃                                                     |
+| 34        | son dus nonkü                                                      | ɐ̃ ʌ́ʃ ƨ̃ɔʄ                                                   |
+| 35        | son dus pızku                                                      | ɐ̃ ʌ́ʃ ʋ̄ȷɔʃ                                                  |
+| 36        | son dus toü                                                        | ɐ̃ ʌ́ʃ cɽʄ                                                   |
+| 37        | son dus xëti                                                       | ɐ̃ ʌ́ʃ ɋʇcɟ                                                  |
+| 38        | son dus tukwos                                                     | ɐ̃ ʌ́ʃ c̑ʃʒ́                                                   |
+| 39        | son dus tiso                                                       | ɐ̃ ʌ́ʃ cɟɐ                                                   |
+| 40        | nonkü dus                                                          | ƨ̃ɔʄ ʌ́ʃ                                                     |
+| 50        | pızku dus                                                          | ʋ̄ȷɔʃ ʌ́ʃ                                                    |
+| 60        | toü dus                                                            | cɽʄ ʌ́ʃ                                                     |
+| 70        | xëti dus                                                           | ɋʇcɟ ʌ́ʃ                                                    |
+| 80        | tukwos dus                                                         | c̑ʃʒ́ ʌ́ʃ                                                     |
+| 90        | tiso dus                                                           | cɟɐ ʌ́ʃ                                                     |
+| 100       | viyën                                                              | ɤɟɀ̃ʇ                                                       |
+| 101       | viyën kut                                                          | ɤɟɀ̃ʇ ɔ̆ʃ                                                    |
+| 234       | düi viyën son dus nonkü                                            | ʌʄɽɟ ɤɟɀ̃ʇ ɐ̃ ʌ́ʃ ƨ̃ɔʄ                                         |
+| 1000      | zën kut                                                            | ꞇ̃ʇ ɔ̆ʃ                                                     |
+| 1,000,000 | zën düi                                                            | ꞇ̃ʇ ʌʄɽɟ                                                   |
+| 1,999     | zën kut,tiso viyën tiso dus tiso                                   | ꞇ̃ʇ ɔ̆ʃ､cɟɐ ɤɟɀ̃ʇ cɟɐ ʌ́ʃ cɟɐ                                 |
+| 1,234,567 | zën düi, düi viyën son dus nonkü zën kut, pızku viyën toü dus xëti | ꞇ̃ʇ ʌʄɽɟ､ ʌʄɽɟ ɤɟɀ̃ʇ ɐ̃ ʌ́ʃ ƨ̃ɔʄ ꞇ̃ʇ ɔ̆ʃ､ ʋ̄ȷɔʃ ɤɟɀ̃ʇ cɽʄ ʌ́ʃ ɋʇcɟ |
 
 ## Tens, Thousands, Millions
 
@@ -83,16 +83,47 @@ commas or periods in our number representations.
 
 ## Quantifying Things
 
-If you supply a cardinal number on the left-hand side of any noun phrase, it effects
-whether the noun is seen as plural or singular.
+If you supply a number on the left-hand side of any noun phrase (in the
+determiner position), it effects whether the noun is seen as plural or singular.
+These are called **Cardinal Numbers**. You can supply any amount of number words
+here and they follow the rules shown above to generate their value or amount.
 
 <Tabs groupId="popöun-zıkto">
   <TabItem value="latin" label="Latin" default>
     <p>%%düi|düi%% %%viyën|viyën%% %%son|son%% %%höveȷi|höveȷi%% "two hundred and three cows"</p>
-    <p>%%kut|kut%% %%ënpokon|ënpokon%% "one burp" or "a burp"</p>
   </TabItem>
   <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
     <p>%%ʌʄɽɟ|düi%% %%ɤɟɀ̃ʇ|viyën%% %%ɐ̃|son%% %%ɂıɤɿⱴɟ|höveȷi%% "two hundred and three cows"</p>
+  </TabItem>
+</Tabs>
+
+If you specify only the number 1 (%%kut|kut%%), it acts like the indefinite
+article ("a/an" in English) but this is usually omitted.
+
+<Tabs groupId="popöun-zıkto">
+  <TabItem value="latin" label="Latin" default>
+    %%kut|kut%% %%ënpokon|ënpokon%% "one burp" or "a burp"
+  </TabItem>
+  <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
     <p>%%ɔ̆ʃ|kut%% %%ɽ̃ʇʋɔ̃|ënpokon%% "one burp" or "a burp"</p>
   </TabItem>
 </Tabs>
+
+
+## Which Place?
+
+If you supply a cardinal number on the right-hand side of any noun phrase (in
+the modifier position), it indicates which specific value in a list of values,
+also known as the *placement*.
+
+| English    | Hisyëö     | ɂ́ɟɀʇɽı  |
+| :--------- | :--------- | ------- |
+| Zeroth     | xünyu      | ɋ̃ʄɀʃ    |
+| First      | kut        | ɔ̆ʃ      |
+| Second     | düi        | ʌʄɽɟ    |
+| Twelfth    | pole       | ʋʓɿ     |
+| Eighteenth | dus tukwos | ʌ́ʃ c̑ʃʒ́  |
+| Twentieth  | düi dus    | ʌʄɽɟ ʌ́ʃ |
+
+
+
