expand number page

--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -90,10 +90,10 @@ here and they follow the rules shown above to generate their value or amount.
 
 <Tabs groupId="popöun-zıkto">
   <TabItem value="latin" label="Latin" default>
-    <p>%%düi|düi%% %%viyën|viyën%% %%son|son%% %%höveȷi|höveȷi%% "two hundred and three cows"</p>
+    %%düi|düi%% %%viyën|viyën%% %%son|son%% %%höveȷi|höveȷi%% "two hundred and three cows"
   </TabItem>
   <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
-    <p>%%ʌʄɽɟ|düi%% %%ɤɟɀ̃ʇ|viyën%% %%ɐ̃|son%% %%ɂıɤɿⱴɟ|höveȷi%% "two hundred and three cows"</p>
+    %%ʌʄɽɟ|düi%% %%ɤɟɀ̃ʇ|viyën%% %%ɐ̃|son%% %%ɂıɤɿⱴɟ|höveȷi%% "two hundred and three cows"
   </TabItem>
 </Tabs>
 
@@ -105,7 +105,7 @@ article ("a/an" in English) but this is usually omitted.
     %%kut|kut%% %%ënpokon|ënpokon%% "one burp" or "a burp"
   </TabItem>
   <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
-    <p>%%ɔ̆ʃ|kut%% %%ɽ̃ʇʋɔ̃|ënpokon%% "one burp" or "a burp"</p>
+    %%ɔ̆ʃ|kut%% %%ɽ̃ʇʋɔ̃|ënpokon%% "one burp" or "a burp"
   </TabItem>
 </Tabs>
 
@@ -125,5 +125,44 @@ also known as the *placement*.
 | Eighteenth | dus tukwos | ʌ́ʃ c̑ʃʒ́  |
 | Twentieth  | düi dus    | ʌʄɽɟ ʌ́ʃ |
 
+Any series of numbers can be an ordinal as long as they appear on the right-hand
+side of a noun phrase.
 
+<Tabs groupId="popöun-zıkto">
+  <TabItem value="latin" label="Latin" default>
+    %%nıwos|nıwos%% %%nonkü|nonkü%% %%do|do%% %%hoi|hoi%% %%ximol|ximol%% "third house on the left"
+  </TabItem>
+  <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
+    %%ƨȷʒ́|nıwos%% %%ƨ̃ɔʄ|nonkü%% %%ʌ|do%% %%ɂɽɟ|hoi%% %%ɋɟƶ͊|ximol%% "third house on the left"
+  </TabItem>
+</Tabs>
+
+## Navigating The Calendar
+
+Telling people on what day, week or month something has or will occur is an
+extremely important tool in any language. Without a calendar system, how can we
+schedule a doctor's appointment, go out on a date, or find out when our favorite
+show returns?
+
+### Days of the Week
+
+### Months of the Year
+
+### Seasons
+
+### Exact Dates
+
+## Talk The Clock
+
+### Durations
+
+### Exact Times
+
+## Measurements
+
+### Temperature
+
+### Mass/Volume/Weight
+
+### Length/Width/Height
 
