add days of week

--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -109,6 +109,12 @@ article ("a/an" in English) but this is usually omitted.
   </TabItem>
 </Tabs>
 
+The language allows you to omit any sense of plurality and this frees you from
+having to worry about how to properly pluralize words. In many languages, the
+plurality of the object is often then replicated in related words. In Hisyëö
+there is no need for any of that and typically you will setup some context of
+what a particular object is referring to and then you just use the head noun to
+refer back to that prior definition including the plurality established.
 
 ## Which Place?
 
@@ -137,6 +143,9 @@ side of a noun phrase.
   </TabItem>
 </Tabs>
 
+As you'll see in the next section, this ordinal-on-the-right usage how we
+communicate dates and time as well.
+
 ## Navigating The Calendar
 
 Telling people on what day, week or month something has or will occur is an
@@ -145,6 +154,21 @@ schedule a doctor's appointment, go out on a date, or find out when our favorite
 show returns?
 
 ### Days of the Week
+
+The Hisyëö week days are named after the actual colors of the planets. The start
+of the week was chosen as Monday to coincide with the near majority of the world
+agreement on this and it allows Saturday and Sunday to be the "Weekend"
+(%%könyëz|könyëz%% %%wëxön|wëxön%%).
+
+| English   | Hisyëö                            | Abugida                        |
+| :-------- | :-------------------------------- | :----------------------------- |
+| Monday    | %%lono|lono%% %%düsul|düsul%%     | %%ʓƨ|lono%% %%ʌʄɐ͊ʃ|düsul%%     |
+| Tuesday   | %%lono|lono%% %%mihüon|mihüon%%   | %%ʓƨ|lono%% %%ƶɟɂʄɽ̃|mihüon%%   |
+| Wednesday | %%lono|lono%% %%ȷöi|ȷöi%%         | %%ʓƨ|lono%% %%ⱴıɽɟ|ȷöi%%      |
+| Thursday  | %%lono|lono%% %%zınöpu|zınöpu%%   | %%ʓƨ|lono%% %%ꞇȷƨıʋʃ|zınöpu%% |
+| Friday    | %%lono|lono%% %%ȷingu|ȷingu%%     | %%ʓƨ|lono%% %%ⱴ̃ɟꜿʃ|ȷingu%%   |
+| Saturday  | %%lono|lono%% %%onpulë|onpulë%%   | %%ʓƨ|lono%% %%ɽ̃ʋʃʓʇ|onpulë%%   |
+| Sunday    | %%lono|lono%% %%xolxili|xolxili%% | %%ʓƨ|lono%% %%ɋ͊ɋɟʓɟ|xolxili%%  |
 
 ### Months of the Year
 
